WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60300
draws-gradient.html's pixel results can't be correctly generated due to alpha channel weirdness
https://bugs.webkit.org/show_bug.cgi?id=60300
Summary
draws-gradient.html's pixel results can't be correctly generated due to alpha...
Adam Roben (:aroben)
Reported
2011-05-05 14:30:45 PDT
draws-gradient.html's pixel results can't be correctly generated due to alpha channel weirdness
Attachments
Patch
(26.15 KB, patch)
2011-05-05 14:31 PDT
,
Adam Roben (:aroben)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-05-05 14:31:20 PDT
Created
attachment 92468
[details]
Patch
Adam Roben (:aroben)
Comment 2
2011-05-05 15:07:42 PDT
Committed
r85889
: <
http://trac.webkit.org/changeset/85889
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug