Update pixel results for draws-gradient.html to have an alpha channel

These pixel results were generated in r71418, when DRT was changed not to use an alpha
channel for pixel results. DRT was changed back to using an alpha channel in r71516, but
these pixel results were never updated. Now that DRT ensures that the alpha channel is
filled with constant opacity, we can safely update these pixel results without negatively
affecting their appearance. (The draws-gradient plugin uses ::GradientFill, which fills the
alpha channel with 0, so the plugin would have shown up as fully transparent in the pixel
results if DRT didn't modify the alpha channel.)

Fixes <http://webkit.org/b/60300> draws-gradient.html's pixel results can't be correctly
generated due to alpha channel weirdness

Reviewed by Sam Weinig.

LayoutTests:

* platform/win/platform/win/plugins/draws-gradient-expected.png: Regenerated. Looks the same
as before, but with an alpha channel.

Tools:

Robustify DRT's pixel-dumping code against semi-random alpha channel values on Windows

DRT generates a pixel dump on Windows using the WM_PRINT message. This message (just like
most of GDI) doesn't write anything meaningful into the alpha channel. In some cases, the
alpha channel will even get filled with zeros (like when ::GradientFill is used). To
safeguard against this, we fill the alpha channel with constant full opacity after the
WM_PRINT message is handled to ensure we end up with an opaque image. (Note that we can't
just ignore the alpha channel when creating the PNG; Mac's pixel results have an alpha
channel, and we want to be able to compare Mac and Windows pixel results, so Windows pixel
results need an alpha channel, too.)

* DumpRenderTree/win/PixelDumpSupportWin.cpp:
(makeAlphaChannelOpaque): Added this helper function to fill a bitmap's alpha channel with
constant full opacity.
(createBitmapContextFromWebView): Make the bitmap's alpha channel opaque before wrapping it
in a CGContext or cairo_surface.

Canonical link: https://commits.webkit.org/75571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85889 268f45cc-cd09-0410-ab3c-d52691b4dbfc